--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ incl. taxes & fees
     <h3>Offers for the period:Aug 16–Aug 20</h3>
     <div class="card3">
     <div class="card-photo">
-        <img src="./Assets/img8.jpeg" alt="">
+        <img src="image/img8.jpg" alt="">
         <span class="card-text">9,4
 9,4 out of 10 rating
 Exceptional
@@ -219,7 +219,7 @@ Airy</span>
         </img>
     </div>
     <div class="card-photo">
-        <img src="./Assets/img8.jpeg" alt="">
+        <img src="image/img8.jpg" alt="">
         <span class="card-text">Our rustic, nautical cottage is perfect for family fun on the North Shore!
 Eureka, CA
 The price is 948 €.
@@ -230,7 +230,7 @@ incl. taxes & fees
         </img>
     </div>
     <div class="card-photo">
-        <img src="./Assets/img8.jpeg" alt="">
+        <img src="image/img8.jpg" alt="">
         <span class="card-text">10
 10 out of 10 rating
 Exceptional
