--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </head>
 <body>
    <div class="header">
-    <img class="logo" src="./Assets/logo.svg" alt="logo">
+    <img class="logo" src="image/logo.svg" alt="logo">
         <ul class="flex-container">
         <li class="li-button">
     <button class="btn-download"> Download the app 
-        <img  class="download-icon" src="image/img2.jpg" alt="down" width=15 heigth=25/>
+        <img  class="download-icon" src="image/img.jpg" alt="down" width=15 heigth=25/>
     </button>
     
 </li>
@@ -46,22 +46,22 @@
     <h4>Find accommodations to suit your taste</h4>
     <div class="flex-container">
     <div class="card-photo">
-        <img src="./Assets/img1.jpeg" alt="">
+        <img src="image/img2.jpg" alt="">
         <span class="card-tex">holiday home</span>
         </img>
     </div>
     <div class="card-photo">
-        <img src="./Assets/Landing page (6).jpg" alt="">
+        <img src="image/img1.jpg" alt="">
         <span class="card-tex">holiday apartment/partment</span>
         </img>
     </div>
     <div class="card-photo">
-        <img src="./Assets/img8.jpeg" alt="">
+        <img src="image/img3.jpg" alt="">
         <span class="card-tex">holiday cabin</span>
         </img>
     </div>
     <div class="card-photo">
-        <img src="./Assets/img4.jpeg" alt="">
+        <img src="image/img9.jpg" alt="">
         <span class="card-tex">villa</span>
         </img>
     </div>
