--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
   <div class="card-photo">
     <img src="image/img1.jpg" alt="holiday apartment">
-    <span class="card-text">holiday apartment</span>
+    <span class="card-text">holiday apartment/appartment</span>
   </div>
   <div class="card-photo">
     <img src="image/img3.jpg" alt="holiday cabin">
